[build-system]
requires = ["uv_build>=0.9.8,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "gello"

[project]
name = "gello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dm-control>=1.0.34",
    "numpy-quaternion",
    "omegaconf==2.3.0",
    "pillow>=11.0.0",
    "pin",
    "pure-python-adb",
    "pygame",
    "pyqt6",
    "pyquaternion",
    "pyrealsense2",
    "pyspacemouse",
    "pyzmq",
    "quaternion",
    "setuptools",
    "termcolor",
    "tyro",
    "ur-rtde",
    "xarm",
    "xarm-python-sdk",
    "zmq",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
gello-software = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "gello",
]
